--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.css
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.css
@@ -16,7 +16,7 @@ div {
     display: flex; /*Ha van flex-direction, akkor kell a display: flex; is!*/
     flex-direction: column;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
-    box-shadow: 1px 2px 1px 5px #888888;
+    /*box-shadow: 1px 2px 1px 5px #888888;*/
 }
 
 #kerdes_szoveg {
