--- a/HajosTeszt/HajosTeszt/wwwroot/stiluslap.css
+++ b/HajosTeszt/HajosTeszt/wwwroot/stiluslap.css
@@ -17,7 +17,7 @@ div {
     padding: 20px;
     border: 1px solid #556172;
     border-radius: 25px;
-    box-shadow: 1px 1px 10px;
+    /*box-shadow: 1px 1px 10px;*/
 }
 
 #box1 {
